--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,8 +3,7 @@
     <div class="row align-items-center justify-content-xl-between">
       <div class="col-xl-6">
         <div class="copyright text-center text-xl-left text-muted">
-          &copy;  PFE {{ currentDate | date: "yyyy" }}
-          <b>Aymen Zaabar</b>
+          &copy; PFE {{ currentDate | date: "yyyy" }} <a href="https://www.linkedin.com/in/aymen-zaabar-a368a9183" class="font-weight-bold ml-1" target="_blank">Aymen Zaabar</a>
         </div>
       </div>
       <div class="col-xl-6">
