--- a/src/app/Modules/usersmanagement/usersmanagement/usersmanagement.component.html
+++ b/src/app/Modules/usersmanagement/usersmanagement/usersmanagement.component.html
@@ -244,9 +244,9 @@
             </td>
             <td>
               <span class=" badge badge-dot mr-4">
-                <i class=" {{ user.isLocked === true ? 'bg-danger' : 'bg-success' }}"> </i>
+                <i class=" {{ user.locked === true ? 'bg-success' : 'bg-danger' }}"> </i>
 
-                <span class=" status"> {{ user.isLocked === true ? 'Compte Archivé' : 'Non archivé' }} </span>
+                <span class=" status"> {{ user.locked === true ? 'Non archivé' : 'Compte Archivé' }} </span>
               </span>
           </td>
 
@@ -290,7 +290,7 @@
                 </div>
 
                 <div class=" modal-footer">
-                  <button class=" btn btn-primary" type="button" (click)="archiveUser(user.Id)" (click)="defaultModal.hide()">
+                  <button class=" btn btn-primary" type="button" (click)="archiveUser(user.id)" (click)="defaultModal.hide()">
                     Confirmer
                   </button>
 
