--- a/src/app/Modules/usersmanagement/drag-drop/drag-drop.component.scss
+++ b/src/app/Modules/usersmanagement/drag-drop/drag-drop.component.scss
@@ -1,6 +1,6 @@
 #modules {
     padding: 20px;
-    background: #eee;
+    background: #ffffff;
     margin-bottom: 20px;
     z-index: 1;
     border-radius: 10px;
@@ -8,7 +8,7 @@
   
   #dropzone1,#dropzone2 {
     padding: 20px;
-    background: #eee;
+    background: #ffffff;
     min-height: 100px;
     margin-bottom: 20px;
     z-index: 0;
