--- a/src/app/Modules/processSupprPNom/process-suppr-pnom/processSupprPNom.component.html
+++ b/src/app/Modules/processSupprPNom/process-suppr-pnom/processSupprPNom.component.html
@@ -1,1 +1,310 @@
-<p>process-suppr-pnom works!</p>
+<div class=" header pb-6">
+    <div class=" container-fluid">
+      <div class=" header-body">
+        <br>
+        <!--<div class=" row align-items-center py-4">
+           <div class=" col-lg-6 col-7">
+            <h6 class=" h2 d-inline-block mb-0">Alternative</h6>
+   
+             <nav
+               aria-label="breadcrumb"
+               class=" d-none d-md-inline-block ml-md-4"
+             >
+               <ol class=" breadcrumb breadcrumb-links">
+                <li class=" breadcrumb-item">
+                   <a href="javascript:void(0)"> <i class=" fas fa-home"> </i> </a>
+                 </li>
+   
+                 <li class=" breadcrumb-item">
+                   <a href="javascript:void(0)"> Dashboards </a>
+                 </li>
+   
+                 <li aria-current="page" class=" breadcrumb-item active">
+                   Alternative
+                 </li>
+               </ol>
+             </nav>
+           </div>
+   
+           <div class=" col-lg-6 col-5 text-right">
+             <a class=" btn btn-sm btn-neutral" href="javascript:void(0)"> New </a>
+   
+             <a class=" btn btn-sm btn-neutral" href="javascript:void(0)">
+               Filters
+             </a>
+           </div>
+         </div>--> 
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class=" container-fluid mt--6">
+    <div class=" row">
+      
+  
+      <div class=" col-xl-3 col-md-6">
+        <div class=" card bg-gradient-orange border-0">
+          <div class=" card-body">
+            <div class=" row">
+              <div class=" col">
+                <h5 class=" card-title text-uppercase text-muted mb-0 text-white">
+                  Processus 
+                </h5>
+  
+                <span class=" text-uppercase text-muted font-weight-bold text-white" >
+                  Suppression p du nom
+                </span>
+  
+                <div class=" progress progress-xs mt-3 mb-0">
+                  <progressbar type="success" [value]="50"> </progressbar>
+                </div>
+              </div>
+  
+              <div class=" col-auto">
+                <div
+                  class=" icon icon-shape bg-gradient-orange text-white rounded-circle shadow"
+                >
+                  <i class=" ni ni-button-pause"> </i>
+                </div>
+              </div>
+            </div>
+  
+            <p class=" mt-3 mb-0 text-sm">
+              <a
+                class=" text-nowrap text-white font-weight-600"
+                href="javascript:void(0)"
+              >
+                See Logs
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      
+  
+      <div class=" card">
+        <div class=" card-header"><h5 class=" h3 mb-0">Batch </h5></div>
+  
+        <div class=" card-body p-0">
+          <ul class=" list-group list-group-flush" data-toggle="checklist">
+            <li
+              class=" checklist-entry list-group-item flex-column align-items-start py-4 px-4"
+            >
+              <div class=" checklist-item checklist-item-warning">
+                <div class=" checklist-info">
+                  <h5 class=" checklist-title mb-0">desactivatePresentation<br>NameD
+
+                    emand.sh </h5>
+  
+                  <small> Commande MB </small>
+                </div>
+  
+                <!-- <div>
+                  <div 
+                    class=" custom-control custom-checkbox custom-checkbox-success"
+                  >
+                    <input
+                      
+                      class=" custom-control-input"
+                      id="chk-todo-task-1"
+                      type="checkbox"
+                    />
+  
+                    <label class=" custom-control-label" for="chk-todo-task-1">
+                    </label>
+                  </div>
+                </div> -->
+              </div>
+            </li>
+            
+            <li
+              class=" checklist-entry list-group-item flex-column align-items-start py-4 px-4"
+            >
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+              <div class=" checklist-item checklist-item-danger">
+                <div class=" checklist-info">
+                  <h5 class=" checklist-title mb-0">treatDesactivatedPresentation<br>
+                    NameDemand.sh   </h5>
+  
+                  <small> Commande MB </small>
+                </div>
+  
+                <!-- <div>
+                  <div
+                    class=" custom-control custom-checkbox custom-checkbox-warning"
+                  >
+                    <input
+                      class=" custom-control-input"
+                      id="chk-todo-task-2"
+                      type="checkbox"
+                    />
+  
+                    <label class=" custom-control-label" for="chk-todo-task-2">
+                    </label>
+                  </div>
+                </div> -->
+              </div>
+            </li>
+            <li
+            class=" checklist-entry list-group-item flex-column align-items-start py-4 px-4"
+          >
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+            <div class=" checklist-item checklist-item-danger">
+              <div class=" checklist-info">
+                <h5 class=" checklist-title mb-0">treatCR.sh   </h5>
+
+                <small> Commande MB </small>
+              </div>
+
+              <!-- <div>
+                <div
+                  class=" custom-control custom-checkbox custom-checkbox-warning"
+                >
+                  <input
+                    class=" custom-control-input"
+                    id="chk-todo-task-2"
+                    type="checkbox"
+                  />
+
+                  <label class=" custom-control-label" for="chk-todo-task-2">
+                  </label>
+                </div>
+              </div> -->
+            </div>
+          </li>
+  
+           
+  
+            
+          </ul>
+        </div>
+      </div>
+      
+      <div class=" col-lg-6">
+        <div class=" card">
+          <div class=" card-header bg-transparent">
+            <h3 class=" mb-0">Résultat</h3>
+          </div>
+  
+          <div class=" card-body">
+            <div
+              class=" timeline timeline-one-side"
+              data-timeline-axis-style="dashed"
+              data-timeline-content="axis"
+            >
+              <div class=" timeline-block">
+                <span class=" timeline-step badge-warning">
+                  <i class=" ni ni-button-power"> </i>
+                </span>
+  
+                <div class=" timeline-content">
+                  <small class=" text-muted font-weight-bold fas fa-clock mr-1"> Non Fréquentiel </small>
+            
+                  <h5 class=" mt-3 mb-0">Output</h5>
+  
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-warning"> ● </span>Lancement d’une demande désactivation de
+
+                    nom à travers le WS ACS.
+                  </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-warning"> ● </span> Passage de statut de la demande de création
+                    de « CREATED » à « DESACTIVATED ».
+                  </p>
+                 
+  
+                  <div class=" mt-3">
+                    <span class=" badge badge-pill badge-warning mr-1">
+                      none
+                    </span>
+  
+                  
+                  </div>
+                </div>
+              </div>
+  
+              <div class=" timeline-block">
+                <span class=" timeline-step badge-danger">
+                  <i class=" ni ni-fat-remove"> </i>
+                </span>
+                
+                <div class=" timeline-content">
+                  <small class=" text-muted font-weight-bold fas fa-clock mr-3"> Non Fréquentiel </small>
+  
+                  <h5 class=" mt-3 mb-0">Output</h5>
+  
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span>Lancement de reboot à travers SAV.
+                  </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span> Un CR « SUPPR_PRESENTATION_NOM ». 
+                  </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span> Passage de statut de la demande de création
+                    de « DESACTIVATED » à « CLOSED » .
+                  </p>
+  
+                  <div class=" mt-3">
+                    <span class=" badge badge-pill badge-danger mr-1">
+                      none
+                    </span>
+  
+                   
+                  </div>
+                </div>
+              </div>
+              
+              <div class=" timeline-block">
+                <span class=" timeline-step badge-danger">
+                  <i class=" ni ni-fat-remove"> </i>
+                </span>
+                
+                <div class=" timeline-content">
+                  <small class=" text-muted font-weight-bold fas fa-clock mr-3"> Non Fréquentiel </small>
+  
+                  <h5 class=" mt-3 mb-0">Output</h5>
+  
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span>Envoi du CR « SUPPR_PRESENTATION_NOM
+
+                    » vers Bicool.
+                  </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span> Mise à jour du CR : treated =true. 
+                  </p>
+  
+                  <div class=" mt-3">
+                    <span class=" badge badge-pill badge-danger mr-1">
+                      none
+                    </span>
+  
+                   
+                  </div>
+                </div>
+              </div>
+              
+  
+              
+  
+             
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
