--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,8 @@
       <ul class="navbar-nav align-items-center">
         <li class="nav-item">
           <a href="https://www.nordnet.com/" class="nav-link">
-           <h2>Acceuil</h2>
+            
+           <h2><i class=" fas fa-home"> &nbsp;</i>Acceuil</h2>
           </a>
         </li>
       </ul>
@@ -108,7 +109,7 @@
             *dropdownMenu
           >
             <div class=" dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
+              <h6 class="text-overflow m-0">Bienvenue !</h6>
             </div>
             <a
               routerLinkActive="active"
@@ -117,12 +118,12 @@
             >
               <i class="ni ni-single-02"></i> <span>Mon profil</span>
             </a>
-            <a
+            <!--<a
               routerLinkActive="active"
               [routerLink]="['/user-profile']"
               class="dropdown-item"
             >
-              <i class="ni ni-settings-gear-65"></i> <span>Settings</span>
+               <i class="ni ni-settings-gear-65"></i> <span>Settings</span>
             </a>
             <a
               routerLinkActive="active"
@@ -137,8 +138,8 @@
               class="dropdown-item"
             >
               <i class="ni ni-support-16"></i> <span>Support</span>
-            </a>
-            <div class="dropdown-divider"></div>
+            </a> 
+            <div class="dropdown-divider"></div>-->
             <a href="#" (click)="logout()" class="dropdown-item">
               <i class="ni ni-user-run"></i> <span>Déconnexion</span>
             </a>
