--- a/src/app/Modules/usersmanagement/drag-drop/drag-drop.component.html
+++ b/src/app/Modules/usersmanagement/drag-drop/drag-drop.component.html
@@ -4,12 +4,13 @@
       <div class="col-sm-4">
         <div id="modules" class="list">
             <h2>Collaborateur</h2>
-          <p class="drag"><a class="btn btn-default">Text</a></p>
-   
+            
+          <div class="drag"> <div class="bg-gradient-orange border"><div class="card-body"><p class="card-title text-uppercase text-muted mb-0 text-white" ><a>Sabri krima</a></p></div></div></div>
+          <div class="drag"> <div class="bg-gradient-orange border"><div class="card-body"><p class="card-title text-uppercase text-muted mb-0 text-white" ><a>Aymen zabar</a></p></div></div></div>
+          <div class="drag"> <div class="bg-gradient-orange border"><div class="card-body"><p class="card-title text-uppercase text-muted mb-0 text-white" ><a>Hssan hochlef</a></p></div></div></div>
+
                     
-          <p class="drag"><a class="btn btn-default">Textarea</a></p>
-          <p class="drag"><a class="btn btn-default">Number</a></p>
-          
+         
         </div>
       </div>
       <div class="col-sm-4">
@@ -21,44 +22,6 @@
         <div id="dropzone2" class="list">
           <h2>Manager</h2>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class=" col-xl-3 col-md-6">
-    <div class=" card bg-gradient-orange border-0">
-      <div class=" card-body">
-        <div class=" row">
-          <div class=" col">
-            <h5 class=" card-title text-uppercase text-muted mb-0 text-white">
-              Processus 
-            </h5>
-
-            <span class=" text-uppercase text-muted font-weight-bold text-white" >
-              Suspension
-            </span>
-
-            <div class=" progress progress-xs mt-3 mb-0">
-              <progressbar type="success" [value]="50"> </progressbar>
-            </div>
-          </div>
-
-          <div class=" col-auto">
-            <div
-              class=" icon icon-shape bg-gradient-orange text-white rounded-circle shadow"
-            >
-              <i class=" ni ni-button-pause"> </i>
-            </div>
-          </div>
-        </div>
-
-        <p class=" mt-3 mb-0 text-sm">
-          <a
-            class=" text-nowrap text-white font-weight-600"
-            href="javascript:void(0)"
-          >
-            See Logs
-          </a>
-        </p>
       </div>
     </div>
   </div>
