--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -140,7 +140,7 @@
               <i class="ni ni-support-16"></i> <span>Support</span>
             </a> 
             <div class="dropdown-divider"></div>-->
-            <a href="#" (click)="logout()" class="dropdown-item">
+            <a  (click)="logout()" class="dropdown-item">
               <i class="ni ni-user-run"></i> <span>Déconnexion</span>
             </a>
           </div>
